Fix table/list layout issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,12 +32,12 @@
 }
 
 .action_icons{
-    font-size: 2em;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    font-size: 1.8em;
+    margin-left: 0em;
+    margin-right: 0em;
     background-color: #8080802f;
-    border-radius: 50%;
-    padding: 0.5em;
+    border-radius: 10%;
+    padding: 0.3em;
 }
 
 .custom_link{
@@ -50,4 +50,8 @@
 
 .custom_field{
     padding-top: 1em !important;
+}
+td{
+    padding-top: 1.5em !important;
+    padding-bottom: 1.5em !important;
 }
